--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body {  /* использую */
+    background-image: url(assets/fonts/Кремовый\ и\ Зеленый\ Творческий\ Резюме.png);
+    background-repeat: no-repeat;
+    background-position: top;
     font-family: 'Roboto', sans-serif;
     min-height: 100vh;
     margin: 0; 
@@ -6,6 +9,7 @@ body {  /* использую */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 20px;
 }
 html { /* использую */
     scroll-behavior: smooth; 
@@ -21,9 +25,16 @@ header { /* использую */
     max-width: 1024px;
     margin: 0 auto;
 }
-footer{ /* использую */
+footer { /* использую */
     background-color: #F2D4BC;
     padding: 20px;
+    
+}
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
 }
 .container { /* использую */
     max-width: 1440px;
@@ -44,6 +55,7 @@ footer{ /* использую */
     padding: 0 20px;
     line-height: 50px;
     transition: .3s;
+    
 }
 .nav-link { /* использую */ 
     position: relative;
@@ -51,12 +63,12 @@ footer{ /* использую */
     text-decoration: none;
     font-size: 20px;
     font-weight: 300;
-    line-height: 50px;
+    line-height: 24px;
     color: #303F3C;
 }
 .section-item :hover {  /* делает анимацию в белый цвет*/
     color: #ffffff;
-    transition: color 0,6s; 
+    transition: 0,6s; 
     text-decoration: none; 
 } 
 .main-section-title { /* имя фамилия*/
@@ -102,8 +114,14 @@ footer{ /* использую */
     object-fit: cover;
     box-shadow: 0 1px 4px rgb(0 0 0 / 60%);
     filter: grayscale(0.2) brightness(1.05);
-    transition: .3s;
+    border: none; /* Параметры рамки */
+    position: relative; /* Относительное позиционирование */
+    transition: 0.5s; /* Время анимации */
 }
+.section-foto:hover {
+    z-index: 10; /* Поверх всех картинок */
+    transform: scale(1.1); /* Масштабирование */
+   }
 .section-profile-title {   /* использую DIV перед Именем*/ 
     display: flex;
     flex-direction: column;
@@ -124,15 +142,23 @@ p {
     margin: 0;
     padding: 0;
     list-style: none;
+    text-indent: 20px
 }
-.section-item {
+.logo {
+    width: 121px;
+    height: 45px;
+    background-image: url(assets/svg/rs_school_js.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+/* .section-item { 
     position: relative;
     margin: 0;
     margin-bottom: 10px;
     padding: 0;
-    padding-left: 30px;
-}
-.contacts-item:before {
+    padding-left: 30px; 
+} */
+/* .contacts-item:before {
     content: "";
     position: absolute;
     top: 1px;
@@ -141,7 +167,7 @@ p {
     height: 24px;
     background-size: contain;
     background-repeat: no-repeat;
-}
+} */
 pre { /* для отображения кода*/
     padding: 0;
     margin: 0;
@@ -149,14 +175,14 @@ pre { /* для отображения кода*/
 code {
     font-family: monospace;
 }
-/* .link {  ссылки (пока не использую)
+.link { 
     text-decoration: none;
     color: #829985;
     transition: color 0.5s;
   }
-.link:hover {  ссылки (пока не использую)
+.link:hover { 
     color: #5d7260;
-} */
+} 
 /* .nav-link::after {  НЕ использую (анимация) 
     content: "";
     position: absolute;
